@@ -1,8 +1,9 @@
-
 V2.1.1 2015-10-22 (for Studio 6.1.0)
     - TDQ-11108 absolute paths issue in junits
     - TDQ-11109 soundex replace junit failure
     - TDQ-11046 problem when masking null values
+    2015-11-13 mzhao 
+    - TDQ-11187 use line separator depending on system
 
 V2.1.0 Julien GONZALEZ 2015-09-15 (TDQ-10456)
     - Creating new GenerateSequence function
